--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,18 +1,29 @@
 .sidebar{
     flex: 3;
-    margin: 20px;
+    margin-right: 0;
     padding-bottom: 30px;
+    height: 40%;
     background-color: #fdfbfb;
-    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: sticky;
+    border-radius: 1.5rem;
+    top: 10%;
+    z-index: 0;
+    right: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
 
 .sidebarItem{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .sidebarTitle{
@@ -23,7 +34,7 @@
     border-bottom: 1px solid #a7a4a4;
     font-family: 'Varela Round', sans-serif;
     font-size: 12px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 20px;
     text-align: center;
 }
@@ -54,7 +65,7 @@
 
 .sidebarSocial{
     margin-top: 15px;
-    width: 250px;
+    width: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
