--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -64,7 +64,7 @@
 }
 
 .sidebarSocial{
-    margin-top: 15px;
+    margin-top: 5%;
     width: 200px;
     display: flex;
     align-items: center;
@@ -72,7 +72,69 @@
 }
 
 .sidebarIcon{
-    font-size: 16px;
+    margin-top: 5%;
+    height: 2rem;
+    width: 3rem;
+    font-size: 35px;
     margin-left: 10px;
     cursor: pointer;
 } 
+
+.mainwv{
+    display: flex;
+    height: 200px;
+    width: auto;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+
+h2{
+    font-size: 6.2rem;
+    position: absolute;
+}
+
+.border{
+    color: black;
+    text-shadow: 
+    -1px -1px 0 white,
+    1px -1px 0 white,
+    -1px 1px 0 white,
+    1px 1px 0 white;
+}
+
+.wave{
+    color: #09f;
+    animation: wave 3s ease-in-out infinite;
+}
+
+@keyframes wave{
+    0%, 100%{
+        clip-path: polygon(
+            0% 47%,
+            10% 48%,
+            33% 54%,
+            54% 60%,
+            70% 62%,
+            84% 59%,
+            100% 52%,
+            100% 100%,
+            0% 100%
+
+        );
+    }
+    50%{
+        clip-path: polygon(
+            0% 60%,
+            15% 65%,
+            34% 66%,
+            51% 62%,
+            63% 50%,
+            84% 45%,
+            100% 46%,
+            100% 100%,
+            0% 100%
+        );
+    }
+}
