--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -3,7 +3,7 @@
     margin-right: 0;
     padding-bottom: 30px;
     height: 40%;
-    background-color: #fdfbfb;
+    background-color: purple;
     display: flex;
     flex-direction: column;
     align-items: center;
