--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -3,7 +3,8 @@
     margin-right: 0;
     padding-bottom: 30px;
     height: 40%;
-    background-color: purple;
+    background-color: #f5f5f5;
+    border-right: 1px solid #e5e5e5;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,17 +35,13 @@
     border-bottom: 1px solid #a7a4a4;
     font-family: 'Varela Round', sans-serif;
     font-size: 12px;
+    color: #222;
+    text-align: center;
     font-weight: 500;
     line-height: 20px;
     text-align: center;
 }
-/* imagenes auxiliares */
-.sidebarItem img{
-    width: 25%;
-    height: 25%;
-    border-radius: 13%;
-    object-fit: cover;
-}
+
 
 .sidebarItem > p {
     padding: 30px;
@@ -58,6 +55,7 @@
 
 .sidebarListItem{
     display: inline-block;
+    padding-bottom: 2px;
     width: 50%;
     margin-top: 15px;
     cursor: pointer;
