--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,138 +1,136 @@
-.sidebar{
-    flex: 3;
-    margin-right: 0;
-    padding-bottom: 30px;
-    height: 40%;
-    background-color: #f5f5f5;
-    border-right: 1px solid #e5e5e5;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: sticky;
-    border-radius: 1.5rem;
-    top: 10%;
-    z-index: 999;
-    right: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+.sidebar {
+  flex: 3;
+  margin-right: 0;
+  padding-bottom: 30px;
+  height: 40%;
+  background-color: #f5f5f5;
+  border-right: 1px solid #e5e5e5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: sticky;
+  border-radius: 1.5rem;
+  top: 10%;
+  z-index: 999;
+  right: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
 }
 
-.sidebarItem{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.sidebarItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.sidebarTitle{
-    margin: 10px;
-    padding: 5px;
-    width: 80%;
-    border-top: 1px solid #a7a4a4;
-    border-bottom: 1px solid #a7a4a4;
-    font-family: 'Varela Round', sans-serif;
-    font-size: 12px;
-    color: #222;
-    text-align: center;
-    font-weight: 500;
-    line-height: 20px;
-    text-align: center;
+.sidebarTitle {
+  margin: 10px;
+  padding: 5px;
+  width: 80%;
+  border-top: 1px solid #a7a4a4;
+  border-bottom: 1px solid #a7a4a4;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 12px;
+  color: #222;
+  text-align: center;
+  font-weight: 500;
+  line-height: 20px;
+  text-align: center;
 }
 
 
-.sidebarItem > p {
-    padding: 30px;
+.sidebarItem>p {
+  padding: 30px;
 
 }
 
-.sidebarList{
-    list-style: none;
-    margin-bottom: 30px;
+.sidebarList {
+  list-style: none;
+  margin-bottom: 30px;
 }
 
-.sidebarListItem{
-    display: inline-block;
-    padding-bottom: 2px;
-    width: 50%;
-    margin-top: 15px;
-    cursor: pointer;
+.sidebarListItem {
+  display: inline-block;
+  padding-bottom: 2px;
+  width: 50%;
+  margin-top: 15px;
+  cursor: pointer;
 }
 
-.sidebarSocial{
-    margin-top: 5%;
-    width: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.sidebarSocial {
+  margin-top: 5%;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.sidebarIcon{
-    margin-top: 5%;
-    height: 2rem;
-    width: 3rem;
-    font-size: 35px;
-    margin-left: 10px;
-    cursor: pointer;
-} 
-
-.mainwv{
-    display: flex;
-    height: 200px;
-    width: auto;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
+.sidebarIcon {
+  margin-top: 5%;
+  height: 2rem;
+  width: 3rem;
+  font-size: 35px;
+  margin-left: 10px;
+  cursor: pointer;
 }
 
-h2{
-    font-size: 6.2rem;
-    position: absolute;
+.mainwv {
+  display: flex;
+  height: 200px;
+  width: auto;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
 }
 
-.border{
-    color: black;
-    text-shadow: 
+h2 {
+  font-size: 6.2rem;
+  position: absolute;
+}
+
+.border {
+  color: black;
+  text-shadow:
     -1px -1px 0 white,
     1px -1px 0 white,
     -1px 1px 0 white,
     1px 1px 0 white;
 }
 
-.wave{
-    color: #09f;
-    animation: wave 3s ease-in-out infinite;
+.wave {
+  color: #09f;
+  animation: wave 3s ease-in-out infinite;
 }
 
-@keyframes wave{
-    0%, 100%{
-        clip-path: polygon(
-            0% 47%,
-            10% 48%,
-            33% 54%,
-            54% 60%,
-            70% 62%,
-            84% 59%,
-            100% 52%,
-            100% 100%,
-            0% 100%
+@keyframes wave {
 
-        );
-    }
-    50%{
-        clip-path: polygon(
-            0% 60%,
-            15% 65%,
-            34% 66%,
-            51% 62%,
-            63% 50%,
-            84% 45%,
-            100% 46%,
-            100% 100%,
-            0% 100%
-        );
-    }
+  0%,
+  100% {
+    clip-path: polygon(0% 47%,
+        10% 48%,
+        33% 54%,
+        54% 60%,
+        70% 62%,
+        84% 59%,
+        100% 52%,
+        100% 100%,
+        0% 100%);
+  }
+
+  50% {
+    clip-path: polygon(0% 60%,
+        15% 65%,
+        34% 66%,
+        51% 62%,
+        63% 50%,
+        84% 45%,
+        100% 46%,
+        100% 100%,
+        0% 100%);
+  }
 }
