--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,67 +1,68 @@
-.top{
-    width: 100%;
-    height: 60px;
-    background-color: white;
-    position: sticky;
-    top: 0;
-    display: flex;
-    align-items: center;
-    font-family: 'Poppins', sans-serif;
-    z-index: 999;
+.top {
+  width: 100%;
+  height: 60px;
+  background-color: white;
+  position: sticky;
+  top: 0;
+  display: flex;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  z-index: 999;
 }
 
-.topLeft, .topRight{
-    flex: 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.topLeft,
+.topRight {
+  flex: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.topIcon{
-    font-size: 20px;
-    margin-right: 10px;
-    color: #444;
-    cursor: pointer;
+.topIcon {
+  font-size: 20px;
+  margin-right: 10px;
+  color: #444;
+  cursor: pointer;
 }
 
-.topcenter{
-    flex: 6;
+.topcenter {
+  flex: 6;
 }
 
-.topImg{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
+.topImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
-.topList{
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.topList {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.topListItem{
-    margin-right: 20px;
-    font-size: 18px;
-    font-weight: 300;
-    cursor: pointer;
+.topListItem {
+  margin-right: 20px;
+  font-size: 18px;
+  font-weight: 300;
+  cursor: pointer;
 }
 
-.topSearchIcon{
-    font-size: 18px;
-    color: #666;
-    cursor: pointer;
-    margin-left: 15px;
+.topSearchIcon {
+  font-size: 18px;
+  color: #666;
+  cursor: pointer;
+  margin-left: 15px;
 }
 
 .Link {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .Link:hover {
-    font-size: 1.1em;
+  font-size: 1.1em;
 }
