--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -69,7 +69,6 @@
   justify-content: center;
 }
 
-<<<<<<< HEAD
 .sidebarIcon {
   margin-top: 5%;
   height: 2rem;
@@ -77,7 +76,7 @@
   font-size: 35px;
   margin-left: 10px;
   cursor: pointer;
-=======
+}
 .sidebarIcon{
     margin-top: 5%;
     height: 2rem;
@@ -95,7 +94,6 @@
     justify-content: center;
     margin: 0;
     padding: 0;
->>>>>>> e8ff21366f7e795b31e7507807ab51aff05b4cb3
 }
 
 .mainwv {
