--- a/src/components/singlePost/singlePost.css
+++ b/src/components/singlePost/singlePost.css
@@ -8,7 +8,7 @@
 }
 
 .singlePostImg {
-  width: 100%;
+  width: 95%;
   height: 300px;
   border-radius: 5px;
   object-fit: cover;
@@ -24,6 +24,9 @@
 .singlePostEdit {
   float: right;
   font-size: 16px;
+  padding-right: 10%;
+  padding-top: 10px;
+  min-width: 100px;
 }
 
 .singlePostIcon {
@@ -46,12 +49,13 @@
   font-size: 16px;
   font-family: 'Varela Round', sans-serif;
   color: #b39656;
+  padding-right: 9%;
 }
-
 .singlePostDesc {
   color: #666;
   font-size: 18px;
   line-height: 25px;
+  margin-right: 20%;
 }
 
 .singlePostDesc::first-letter {
@@ -59,5 +63,4 @@
   font-size: 30px;
   min-width: 600px;
   font-weight: 600;
-
 }
