--- a/frontend/src/components/posts/posts.css
+++ b/frontend/src/components/posts/posts.css
@@ -1,6 +1,44 @@
+.postImg {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
 .posts {
+  width: 880px;
+  margin: 0px 25px 40px 25px;
   flex: 9;
   display: flex;
   flex-wrap: wrap;
-  margin: 20px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.postInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.postTitle {
+  font-family: Josefin Sans, sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  color: #222;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.postDes {
+  font-family: "Varela Round", sans-serif;
+  font-size: 14px;
+  color: #444;
+  line-height: 24px;
+  margin-top: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
