--- a/frontend/src/components/sidebar/sidebar.css
+++ b/frontend/src/components/sidebar/sidebar.css
@@ -1,23 +1,15 @@
 .sidebar {
   flex: 3;
-  margin-right: 0;
-  padding-bottom: 30px;
-  height: 40%;
-  background-color: #f5f5f5;
-  border-right: 1px solid #e5e5e5;
+  height: 80vh;
+  margin: 20px;
+  padding-bottom: 10px;
+  border-radius: 10px;
   display: flex;
+  background-color: #222;
+  margin: 70px 0 0 0;
   flex-direction: column;
-  align-items: center;
   position: sticky;
-  border-radius: 1.5rem;
-  top: 10%;
-  z-index: 999;
-  right: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+  top: 0;
 }
 
 .sidebarItem {
