--- a/frontend/src/components/topbar/topbar.css
+++ b/frontend/src/components/topbar/topbar.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 60px;
   background-color: white;
-  position: sticky;
+  /* position: sticky; */
   top: 0;
   display: flex;
   align-items: center;
