--- a/frontend/src/components/posts/posts.css
+++ b/frontend/src/components/posts/posts.css
@@ -1,12 +1,12 @@
 .postImg {
-  width: 100%;
+  width: 95%;
   height: 280px;
   object-fit: cover;
   border-radius: 15px;
 }
 
 .posts {
-  width: 880px;
+  width: 385px;
   margin: 0px 25px 40px 25px;
   flex: 9;
   display: flex;
@@ -19,6 +19,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  
+}
+
+.postAuthor {
+  font-size: 18px;
+  font-family: 'Varela Round', sans-serif;
+  color: #b39656;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  text-align: left;
 }
 
 .postTitle {
@@ -27,10 +38,9 @@
   font-weight: 700;
   color: #222;
   margin-top: 10px;
-  cursor: pointer;
 }
 
-.postDes {
+.postDesc {
   font-family: "Varela Round", sans-serif;
   font-size: 14px;
   color: #444;
@@ -41,4 +51,15 @@
   display: -webkit-box;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
+
 }
+
+.linkToSingle {
+  margin: 0;
+  color: #222;
+  text-decoration: none;
+  cursor: pointer;  
+}
+
+
+
