--- a/frontend/src/components/singlePost/singlePost.css
+++ b/frontend/src/components/singlePost/singlePost.css
@@ -9,9 +9,12 @@
 
 .singlePostImg {
   width: 95%;
-  height: 300px;
+  height: 355px;
   border-radius: 5px;
   object-fit: cover;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+
 }
 
 .singlePostTitle {
@@ -49,7 +52,8 @@
   font-size: 16px;
   font-family: 'Varela Round', sans-serif;
   color: #b39656;
-  padding-right: 9%;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 .singlePostDesc {
   color: #666;
