--- a/frontend/src/pages/write/write.css
+++ b/frontend/src/pages/write/write.css
@@ -65,3 +65,11 @@
   cursor: pointer;
   font-size: 16px;
 }
+
+.postDesc {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
