--- a/frontend/src/components/singlePost/singlePost.css
+++ b/frontend/src/components/singlePost/singlePost.css
@@ -19,7 +19,7 @@
 
 .singlePostTitle {
   text-align: center;
-  margin: 10px;
+  margin: 1rem;
   font-family: 'Lora', serif;
   font-size: 28px;
 }
@@ -27,9 +27,6 @@
 .singlePostEdit {
   float: right;
   font-size: 16px;
-  padding-right: 10%;
-  padding-top: 10px;
-  min-width: 100px;
 }
 
 .singlePostIcon {
@@ -46,7 +43,7 @@
 }
 
 .singlePostInfo {
-  margin-bottom: 20px;
+  margin-bottom: 1.20rem;
   display: flex;
   justify-content: space-between;
   font-size: 16px;
@@ -55,16 +52,18 @@
   margin-left: 15px;
   margin-right: 15px;
 }
+
 .singlePostDesc {
-  color: #666;
-  font-size: 18px;
-  line-height: 25px;
-  margin-right: 20%;
+  font-size: 16px;
+  font-family: 'Varela Round', sans-serif;
+  color: darkgray;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .singlePostDesc::first-letter {
   margin-left: 20px;
-  font-size: 30px;
+  font-size: 25px;
   min-width: 600px;
   font-weight: 600;
 }
