Estilos write and single

--- a/frontend/src/components/singlePost/singlePost.css
+++ b/frontend/src/components/singlePost/singlePost.css
@@ -56,7 +56,7 @@
 .singlePostDesc {
   font-size: 16px;
   font-family: 'Varela Round', sans-serif;
-  color: darkgray;
+  color: darkslategrey;
   margin-left: 15px;
   margin-right: 15px;
 }
