--- a/frontend/src/pages/write/write.css
+++ b/frontend/src/pages/write/write.css
@@ -1,67 +1,121 @@
 .write {
-  padding-top: 50px;
-
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.writeImg {
-  margin-left: 150px;
-  width: 70vw;
-  height: 250px;
-  border-radius: 10px;
-  object-fit: cover;
+.writePost {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .writeForm {
-  position: relative;
-
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 }
 
 .writeFormGroup {
-  margin-left: 150px;
   display: flex;
-  align-items: center;
-
-}
-
-.writeIcon {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  border: 1px solid;
-  display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
-  font-size: 20px;
-  color: rgb(128, 125, 125);
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.labelInput {
+  position: relative;
+  top: 180px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
+  
 }
 
-.writeInput {
-  font-size: 30px;
-  border: none;
-  padding: 20px;
-  width: 70vw;
+
+.addSuccesFull {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 
 }
 
-.writeInput:focus {
-  outline: none;
+.writeInputTitle{
+  text-align: center;
+  margin-left: 31px;
+  margin-bottom: 1rem;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 28px;
+  width: 50%;
+
+
 }
 
-.writeText {
-  font-size: 20px;
-  height: 100vh;
+.writeInputAuthor {
+  text-align: center;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+  font-family: 'Varela Round', sans-serif;
+  color: #000;
+  margin-left: 31px;
+  width: 50%;
+}
+
+.writeInputDesc{
+  font-size: 16px;
+  font-family: 'Varela Round', sans-serif;
+  color: darkgray;
+  margin-left: 31px;
+  resize: none;
+  width: 50%;
+
+
 }
 
 .writeSubmit {
-  position: absolute;
-  top: 20px;
-  right: 50px;
-  color: white;
-  background-color: teal;
-  padding: 10px;
-  border: none;
-  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 15%;
+  width: 10%;
+  margin-top: 40px;
+  margin-left: 45%;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #f2f2f2;
   cursor: pointer;
-  font-size: 16px;
+  border-radius: 10px;
+  min-width: 100px;
+  border: none;
+  background-color: teal;
+}
+
+.writePostImg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  z-index: 999;
+
+
 }
