--- a/client/src/components/posts/posts.css
+++ b/client/src/components/posts/posts.css
@@ -6,18 +6,16 @@
 }
 
 .Posts {
-  width: 395px;
-  margin: 0px 25px 40px 25px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border-radius: 15px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease-in-out;
-  cursor: pointer;
-  text-decoration: none;
-  color: #222;
+  /* the posts will be render in a grid */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem;
+  grid-auto-rows: 200px;
+  grid-auto-rows: minmax(100px, auto);
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 0 1rem;
+  
 }
 
 
