--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -6,7 +6,7 @@
   top: 0;
   display: flex;
   align-items: center;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   z-index: 999;
 }
 
@@ -19,7 +19,9 @@
 }
 
 .topIcon {
-  font-size: 20px;
+  font-size: 10px;
+  width: 160px;
+  height: 60px;
   margin-right: 10px;
   color: #444;
   cursor: pointer;
@@ -64,5 +66,6 @@
 }
 
 .Link:hover {
-  font-size: 1.1em;
+  text-decoration: underline;
+  font-weight: 600;
 }
