--- a/client/src/pages/write/write.css
+++ b/client/src/pages/write/write.css
@@ -1,64 +1,63 @@
-/* Estilos para el formulario de escritura */
 .write {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  width: 100%;
+  padding-top: 50px;
+}
+
+.writeImg {
+  margin-left: 150px;
+  width: 85%;
+  height: 250px;
+  border-radius: 10px;
+  object-fit: cover;
 }
 
 .writeForm {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 700px;
+  position: relative;
 }
 
 .writeFormGroup {
-  margin-bottom: 15px;
+  margin-left: 150px;
+  display: flex;
+  align-items: center;
 }
 
-.writeInputTitle {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 100%;
+.writeIcon {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: 1px solid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: rgb(121, 118, 118);
+  cursor: pointer;
 }
 
-.writeInputDesc {
-  padding: 10px;
-  font-size: 18px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 100%;
-  resize: vertical;
+.writeInput {
+  font-size: 30px;
+  border: none;
+  padding: 20px;
+  width: 70vw;
+}
+
+.writeInput:focus {
+  outline: none;
+}
+
+.writeText {
+  font-size: 20px;
+  height: 100vh;
 }
 
 .writeSubmit {
-  margin-top: 20px;
-  padding: 10px 20px;
-  font-size: 18px;
-  background-color: #4CAF50;
+  position: absolute;
+  top: 20px;
+  right: 50px;
   color: white;
+  background-color: teal;
+  padding: 10px;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.writeSubmit:hover {
-  background-color: #3e8e41;
-}
-
-@media (max-width: 767px) {
-  .writeInputTitle {
-    font-size: 20px;
-  }
-  
-  .writeInputDesc {
-    font-size: 16px;
-  }
+  font-size: 16px;
 }
