--- a/client/src/components/posts/posts.css
+++ b/client/src/components/posts/posts.css
@@ -18,8 +18,6 @@
   
 }
 
-
-
 .PostInfo {
   display: flex;
   flex-direction: column;
@@ -42,6 +40,10 @@
   font-weight: 700;
   color: #222;
   margin-top: 10px;;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 90%;
 }
 
 .PostsDesc {
@@ -50,6 +52,10 @@
   color: #444;
   line-height: 24px;
   margin-top: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 90%;
 }
 
 .linkToSingle {
@@ -57,6 +63,13 @@
   color: #222;
   text-decoration: none;
   cursor: pointer;
+}
+
+.PostDate {
+  font-family: "Varela Round", sans-serif;
+  font-size: 14px;
+  color: #444;
+  margin-top: 10px;
 }
 
 /* spinner */
