--- a/client/src/components/singlePost/singlePost.css
+++ b/client/src/components/singlePost/singlePost.css
@@ -1,5 +1,7 @@
 .singlePost {
   flex: 9;
+  max-width: 95%;
+  margin: 0 auto;
 }
 
 .singlePostWrapper {
@@ -60,6 +62,7 @@
   margin-left: 15px;
   margin-right: 15px;
   line-height: 30px;
+  overflow-wrap: break-word;
 }
 
 .singlePostDesc::first-letter {
