--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,3 +1,7 @@
+root {
+  --main-color-light: #f5f5f5;
+  --main-color-dark: #7b7474;
+}
 .header {
   margin-top: 60px;
 
@@ -8,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   font-family: 'Lora', serif;
-  color: #444;
+  color: var(--main-color-dark);
 }
 
 .headerTitleSm {
