--- a/client/src/components/singlePost/singlePost.css
+++ b/client/src/components/singlePost/singlePost.css
@@ -1,3 +1,15 @@
+root {
+  --main-color: #b39656;
+  --main-color-light: #f5f5f5;
+  --main-color-dark: #222;
+  --main-color-dark-light: #444;
+  --main-color-dark-lighter: #666;
+  --main-color-dark-lightest: #888;
+  --main-color-dark-lightestest: #aaa;
+  --main-color-dark-lightestestest: #ccc;
+  --main-color-dark-lightestestestest: #eee;
+}
+
 .singlePost {
   flex: 9;
   max-width: 95%;
@@ -50,7 +62,7 @@
   justify-content: space-between;
   font-size: 18px;
   font-family: 'Varela Round', sans-serif;
-  color: #b39656;
+  color: var(--main-color-dark-lightestestestestestest);
   margin-left: 15px;
   margin-right: 15px;
 }
@@ -58,11 +70,11 @@
 .singlePostDesc {
   font-size: 18px;
   font-family: 'Varela Round', sans-serif;
-  color: darkslategrey;
+  color: var(--main-color-dark-lightestestestestestest);
   margin-left: 15px;
   margin-right: 15px;
   line-height: 30px;
-  overflow-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 .singlePostDesc::first-letter {
