--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -1,29 +1,66 @@
+root {
+  --main-color: #b39656;
+  --main-color-light: #f5f5f5;
+  --main-color-dark: #222;
+  --main-color-dark-light: #444;
+  --main-color-dark-lighter: #666;
+  --main-color-dark-lightest: #888;
+  --main-color-dark-lightestest: #aaa;
+  --main-color-dark-lightestestest: #ccc;
+  --main-color-dark-lightestestestest: #eee;
+}
+
 .top {
   width: 100%;
   height: 60px;
-  background-color: white;
   position: sticky;
   top: 0;
   display: flex;
   align-items: center;
   font-family: "Josefin Sans", sans-serif;
   z-index: 999;
+  background-color: var(--main-color-light);
 }
+
+.top.dark {
+  background-color: #111;
+  color: #fff;
+  & .Link {
+    color: #fff;
+  }
+}
+
+.top.light {
+  background-color: #fff;
+  color: #222;
+  & .Link {
+    color: #222;
+  }
+}
+
 
 .topLeft,
 .topRight {
-  flex: 3;
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.topIconMoon {
+  font-size: 28px;
+  width: 90px;
+  height: 60px;
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .topIcon {
-  font-size: 10px;
-  width: 160px;
-  height: 60px;
+  font-size: 28px;
+  width: 230px;
+  height: 120px;
   margin-right: 10px;
-  color: #444;
   cursor: pointer;
 }
 
@@ -55,14 +92,13 @@
 
 .topSearchIcon {
   font-size: 18px;
-  color: #666;
   cursor: pointer;
-  margin-left: 15px;
+  margin-right: 2rem;
 }
 
 .Link {
   text-decoration: none;
-  color: black;
+  color: inherit;
 }
 
 .Link:hover {
