--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,15 @@
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+body.dark {
+  background-color: #222;
+  color: #fff;
+}
+
+body.light {
+  background-color: #fff;
+  color: #222;
+}
+
+
